2008-06-10  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (Fx_font_dialog): New function.

	* gtkutil.c (xg_dialog_response_cb): Rename from,
	xg_file_response_callback.
	(pop_down_dialog): Rename from pop_down_file_dialog.
	(xg_get_file_name): Callers changed.
	(xg_get_font_name): New function.

	* gtkutil.h (xg_get_font_name): Insert prototype,

2008-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (underline_minimum_offset): Rename from xterm.c's
	x_underline_minimum_display_offset.
	(syms_of_xdisp): Declare it here rather than in xterm.c.
	* dispextern.h (underline_minimum_offset): Declare it.
	* w32term.c (x_draw_glyph_string): Use it.
	* xterm.c (x_underline_minimum_display_offset): Move to xdisp.c.
	(syms_of_xterm): Don't declare it any more.
	(x_draw_glyph_string): Adjust to the new name.

2008-06-10  David De La Harpe Golden  <david@harpegolden.net>  (tiny change)

	* xterm.c (x_underline_minimum_display_offset): New var.
	(x_draw_glyph_string): Use it.
	(syms_of_xterm): Declare it.

2008-06-10  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Accept GTK-style font names too.

2008-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired.c (file_name_completion): Don't return t if the match is exact
	but with different capitalization.
	* minibuf.c (Ftry_completion): Simplify.

	* window.c (Vwindow_point_insertion_type): New var.
	(set_window_buffer): Use it.
	(syms_of_window): Init and export it to Lisp.

2008-06-10  Kenichi Handa  <handa@m17n.org>

	* font.h (font_intern_prop): Prototype adjusted.

	* font.c (font_intern_prop): New arg force_symbol.
	(font_parse_xlfd, font_parse_fcname, font_parse_family_registry):
	Adjust for the change of font_intern_prop.

	* ftfont.c (ftfont_pattern_entity):
	* w32font.c (add_font_name_to_list, w32_enumfont_pattern_entity)
	(w32_registry):
	* w32uniscribe.c (add_opentype_font_name_to_list): Adjust for
	the change of font_intern_prop.
