@@ -1,3 +1,8 @@
+2008-06-10  Jason Rumney  <jasonr@gnu.org>
+
+        * w32uniscribe.c (add_opentype_font_name_to_list): Skip non unicode
+        fonts.
+
 2008-06-10  Chong Yidong  <cyd@stupidchicken.com>
 
 	* xfns.c (Fx_font_dialog): New function.
